# SAUSAUPROJEKAT

./: .gitignore  README.md  generate_pdf.py  pyproject.toml  pyrightconfig.json  requirements.txt
app/: README.md  app.py
data/: hetI.csv
models/: feature_selection.json  grid_search.json  threshold.json  variants.json
src/: config.py  data_prep.py  evaluate.py  predict.py  train.py
